// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a secondary image 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div
        id="0"
      >
        <div>
          <ArticleImage
            captionOptions={
              Object {
                "caption": "A Caption",
                "credits": "Some Credits",
              }
            }
            imageOptions={
              Object {
                "display": "secondary",
                "highResSize": null,
                "lowResSize": 100,
                "ratio": "3:2",
                "uri": "https://image-2.io",
              }
            }
          />
        </div>
      </div>
      <aside
        id="related-articles"
      />
    </div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixel"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelteads"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelskin"
    />
  </div>
</article>
`;

exports[`2. an inline image 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div
        id="0"
      >
        <div>
          <ArticleImage
            captionOptions={
              Object {
                "caption": "A Caption",
                "credits": "Some Credits",
              }
            }
            imageOptions={
              Object {
                "display": "inline",
                "highResSize": null,
                "lowResSize": 100,
                "ratio": "9:4",
                "uri": "https://image-inline.io",
              }
            }
          />
        </div>
      </div>
      <aside
        id="related-articles"
      />
    </div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixel"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelteads"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelskin"
    />
  </div>
</article>
`;
